Fix angle range in the angle selector in status bar and overview docker

BUG:434993

(cherry picked from commit 60047275c25495d50bebfd3e77a8516ed6a9f619)